fixed transform that caused background to shift

--- a/src/components/Styles/About.css
+++ b/src/components/Styles/About.css
@@ -1,7 +1,7 @@
 @keyframes fadeInRight {
   from {
     opacity: 0;
-    transform: translate3d(100%, 0, 0);
+    transform: translate3d(20%, 0, 0);
   }
 
   to {
@@ -17,7 +17,7 @@
 @keyframes fadeInLeft {
   from {
     opacity: 0;
-    transform: translate3d(-100%, 0, 0);
+    transform: translate3d(-20%, 0, 0);
   }
 
   to {
